crates/pixtuoid/tests/snapshots/layout_golden__room_walls_dense_seed6.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
assertion_line: 120
expression: l.room_walls
---
[
    (
        Point {
            x: 67,
            y: 48,
        },
        Point {
            x: 67,
            y: 69,
        },
    ),
    (
        Point {
            x: 67,
            y: 83,
        },
        Point {
            x: 67,
            y: 104,
        },
    ),
    (
        Point {
            x: 0,
            y: 104,
        },
        Point {
            x: 33,
            y: 104,
        },
    ),
    (
        Point {
            x: 47,
            y: 104,
        },
        Point {
            x: 67,
            y: 104,
        },
    ),
]
