crates/pixtuoid/tests/snapshots/layout_golden__room_walls_open_plan_seed2.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
assertion_line: 93
expression: l.room_walls
---
[
    (
        Point {
            x: 56,
            y: 36,
        },
        Point {
            x: 56,
            y: 50,
        },
    ),
    (
        Point {
            x: 56,
            y: 64,
        },
        Point {
            x: 56,
            y: 78,
        },
    ),
    (
        Point {
            x: 0,
            y: 78,
        },
        Point {
            x: 26,
            y: 78,
        },
    ),
    (
        Point {
            x: 40,
            y: 78,
        },
        Point {
            x: 56,
            y: 78,
        },
    ),
]
