crates/pixtuoid/tests/snapshots/layout_golden__walkway_96x72.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
assertion_line: 39
expression: l.walkway
---
Bounds {
    x: 27,
    y: 64,
    width: 69,
    height: 8,
}
