crates/pixtuoid/tests/snapshots/layout_golden__waypoints_192x160.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.waypoints
---
[
    Waypoint {
        pos: Point {
            x: 102,
            y: 51,
        },
        kind: Couch,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 26,
            y: 140,
        },
        kind: Pantry,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 59,
            y: 152,
        },
        kind: VendingMachine,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 182,
            y: 151,
        },
        kind: Printer,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 22,
            y: 64,
        },
        kind: MeetingSofa,
        facing: South,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 30,
            y: 64,
        },
        kind: MeetingSofa,
        facing: South,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 22,
            y: 92,
        },
        kind: MeetingSofa,
        facing: North,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 30,
            y: 92,
        },
        kind: MeetingSofa,
        facing: North,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 18,
            y: 76,
        },
        kind: MeetingStand,
        facing: East,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 34,
            y: 76,
        },
        kind: MeetingStand,
        facing: West,
        room_id: Some(
            0,
        ),
    },
]
