crates/pixtuoid/tests/snapshots/layout_golden__waypoints_96x72.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.waypoints
---
[
    Waypoint {
        pos: Point {
            x: 51,
            y: 24,
        },
        kind: Couch,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 15,
            y: 61,
        },
        kind: Pantry,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 9,
            y: 28,
        },
        kind: MeetingSofa,
        facing: South,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 17,
            y: 28,
        },
        kind: MeetingSofa,
        facing: South,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 9,
            y: 39,
        },
        kind: MeetingSofa,
        facing: North,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 17,
            y: 39,
        },
        kind: MeetingSofa,
        facing: North,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 5,
            y: 33,
        },
        kind: MeetingStand,
        facing: East,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 21,
            y: 33,
        },
        kind: MeetingStand,
        facing: West,
        room_id: Some(
            0,
        ),
    },
]
