crates/pixtuoid/tests/snapshots/layout_golden__waypoints_open_plan_seed2.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.waypoints
---
[
    Waypoint {
        pos: Point {
            x: 93,
            y: 39,
        },
        kind: Couch,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 28,
            y: 105,
        },
        kind: Pantry,
        facing: South,
        room_id: None,
    },
    Waypoint {
        pos: Point {
            x: 24,
            y: 48,
        },
        kind: MeetingSofa,
        facing: South,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 32,
            y: 48,
        },
        kind: MeetingSofa,
        facing: South,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 24,
            y: 69,
        },
        kind: MeetingSofa,
        facing: North,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 32,
            y: 69,
        },
        kind: MeetingSofa,
        facing: North,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 20,
            y: 57,
        },
        kind: MeetingStand,
        facing: East,
        room_id: Some(
            0,
        ),
    },
    Waypoint {
        pos: Point {
            x: 36,
            y: 57,
        },
        kind: MeetingStand,
        facing: West,
        room_id: Some(
            0,
        ),
    },
]
